--- a/configuration.json
+++ b/configuration.json
@@ -2,7 +2,7 @@
   "engine": "mysql",
   "server": "127.0.0.1",
   "port": "3306",
-  "user": "root",
-  "password": "lexco123",
-  "database": "sgdea"
+  "user": "???",
+  "password": "???",
+  "database": "???"
 }
