--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-!./ignoredfolder
-./ignoredfolder
+!./ignoredfolder/
+./ignoredfolder/
 !./ignoredfolder/notigno/
