--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736 xd
 .glide/
 
-!/ignoredfolder/
-/ignoredfolder/**
-!/ignoredfolder/not/
+!/ignor2/
+/ignor2/**
+!/ignor2/noinc/
